themes, menu collapse, other fixes

--- a/resources/scss/dark/assets/main.scss
+++ b/resources/scss/dark/assets/main.scss
@@ -4981,3 +4981,17 @@ body.layout-dark blockquote.blockquote{
     padding-top: 11px;
     padding-right: 11px;
 }
+.sidebar-wrapper .menu i {
+    font-size: 18px !important;
+    padding-top: 2px;
+    margin-top: -3px;
+}
+body.layout-dark #sidebar ul.menu-categories li.menu ul.submenu>li a:before {
+    content: none !important;
+    background-color: transparent;
+    height: 0;
+    width: 0;
+    top: auto;
+    left: auto;
+    border-radius: 0;
+}
